--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinterest Chafón</title>
+    <title>Share Images</title>
 
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/icono.png')}}"/>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/icon.png')}}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css')}}">
 
     <!--CSS BOOTSTRAP 4.6-->
@@ -28,8 +28,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='img/icono.png')}}" width="60" height="60" alt="logo de la pagina">
-            Pinterest Chafón
+            <img src="{{ url_for('static', filename='img/icon.png')}}" width="60" height="60" alt="logo de la pagina">
+            Share Images
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
