--- a/templates/PanelAdministrador/index.html
+++ b/templates/PanelAdministrador/index.html
@@ -66,6 +66,26 @@
         </div>
     </div>
 
+    <div class="row mt-3">
+        <div class="col-sm-6">
+            <!--Pie Chart-->
+            <div class="mt-1 mb-3 p-3 button-container  bg-white shadow-sm border">
+                <h6>Porcentaje de Usuarios por genero</h6>
+                
+                <canvas id="pieChart" height="150px"></canvas>
+            </div>
+            <!--/Pie Table-->
+        </div>
+        <div class="col-sm-6">
+            <!--Pie Chart-->
+            <div class="mt-1 mb-3 p-3 button-container  bg-white shadow-sm border">
+                <h6>Porcentaje de publicaciones por genero</h6>
+                
+                <canvas id="pieChartPublicacionesPorgGenero" height="150px"></canvas>
+            </div>
+            <!--/Pie Table-->
+        </div>
+    </div>
 
     <div class="mt-4 mb-4 p-3 bg-white border shadow-sm lh-sm">
         <!--Order Listing-->
