--- a/templates/PanelAdministrador/datatable.html
+++ b/templates/PanelAdministrador/datatable.html
@@ -1,5 +1,6 @@
 {% extends 'PanelAdministrador/layout.html'%}
 {% block content %}
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- Page JavaScript Files-->
 <script src="{{url_for('static', filename='assets/js/jquery.min.js')}}"></script>
 <script src="{{ url_for('static', filename='assets/js/jquery-1.12.4.min.js')}}"></script>
@@ -8,14 +9,19 @@
 <script src="{{ url_for('static', filename='assets/js/dataTables.bootstrap4.min.js')}}"></script>
 <!--Content right-->
 <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
-    <h5 class="mb-0" ><strong>Datatable</strong></h5>
-    <span class="text-secondary">Dashboard <i class="fa fa-angle-right"></i> Datatable</span>
+    <h5 class="mb-0" ><strong>Administrar Publicaciones</strong></h5>
     
+    <div class="list-group list-group-horizontal p-3" >          
+        <a class="list-group-item list-group-item-action active" id="btnPublicacionesAc" onclick="Visible('PublicacionesActivas')">Publicaciones Activas</a>
+        <a class="list-group-item list-group-item-action" id="btnPublicacionesEl" onclick="Visible('PublicacionesEliminadas')">Publicaciones Eliminadas</a>
+    </div>
+
+
     <div class="row mt-3">
         <div class="col-sm-12">
             <!--Datatable-->
-            <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                <h6 class="mb-2">Datatable</h6>
+            <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm" id="PubsActivas">
+                <h6 class="mb-2">Publicaciones Activas</h6>
                 
                 <div class="table-responsive">
                     <table id="example" class="table table-striped table-bordered">
@@ -27,14 +33,15 @@
                                 <th>Imagen</th>
                                 <th>Fecha</th>
                                 <th>Usuario</th>
+                                <th>Email</th>
                                 <th>Operaciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% if publications %}
                                 {% for publication in publications %}
-                                <tr>
-                                    <td>
+                                <tr id="activepub{{publication.0}}">
+                                    <td style="text-align: center;">
                                         {{publication.0}}
                                     </td>
                                     <td>
@@ -43,17 +50,96 @@
                                     <td>
                                         {{publication.2}}
                                     </td>
-                                    <td>
-                                        {{publication.3}}
+                                    <td style="text-align: center;">
+                                        <a class="btn btn-primary" style="color: white;" onclick="SeeImagePub('{{publication.3}}')">
+                                            <i class="fas fa-eye"></i>
+                                        </a>
+                                        
                                     </td>
                                     <td>
                                         {{publication.6}}
                                     </td>
+                                    <td style="text-align: center;">
+                                        <a >
+                                            <img src="/{{publication.12}}" alt="" width="50" height="50">
+                                        </a>
+                                        
+                                    </td>
                                     <td>
-                                        {{publication.12}}
+                                        {{publication.10}}
+                                    </td>
+                                    <td style="text-align: center;">
+                                        <a class="btn btn-danger eliminar" style="color: white;" onclick="ConfirmChangeStatus('{{publication.0}}','{{publication.18-1}}','4')">
+                                            <i class="fas fa-trash"></i>
+                                        </a>
                                     </td>
                                 </tr>
                                 {%endfor%}
+                                
+                            {% endif%}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!--/Datatable-->
+
+            <!--Datatable de publicaciones eliminadas-->
+            <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm" id="PubsEliminadas" style="display: none;">
+                <h6 class="mb-2">Publicaciones Eliminadas</h6>
+                
+                <div class="table-responsive">
+                    <table id="example2" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Titulo</th>
+                                <th>Descripcion</th>
+                                <th>Imagen</th>
+                                <th>Fecha</th>
+                                <th>Usuario</th>
+                                <th>Email</th>
+                                <th>Operaciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% if pubsdeleted %}
+                                {% for pubdeleted in pubsdeleted %}
+                                <tr id="activepubel{{pubdeleted.0}}">
+                                    <td style="text-align: center;">
+                                        {{pubdeleted.0}}
+                                    </td>
+                                    <td>
+                                        {{pubdeleted.1}}
+                                    </td>
+                                    <td>
+                                        {{pubdeleted.2}}
+                                    </td>
+                                    <td style="text-align: center;">
+                                        <a class="btn btn-primary" style="color: white;" onclick="SeeImagePub('{{pubdeleted.3}}')">
+                                            <i class="fas fa-eye"></i>
+                                        </a>
+                                        
+                                    </td>
+                                    <td>
+                                        {{pubdeleted.6}}
+                                    </td>
+                                    <td style="text-align: center;">
+                                        <a >
+                                            <img src="/{{pubdeleted.12}}" alt="" width="50" height="50">
+                                        </a>
+                                        
+                                    </td>
+                                    <td>
+                                        {{pubdeleted.10}}
+                                    </td>
+                                    <td style="text-align: center;">
+                                        <a class="btn btn-success eliminar" style="color: white;" onclick="ConfirmChangeStatus('{{pubdeleted.0}}','{{pubdeleted.18-1}}','3')">
+                                            <i class="fas fa-check"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                                {%endfor%}
+                                
                             {% endif%}
                         </tbody>
                     </table>
@@ -63,11 +149,147 @@
 
         </div>
     </div>
-
+    
 <script>
-    $(document).ready( function () {
-    $('#example').DataTable();
-    });
+    
+    var pubtable=$('#example').DataTable();
+    var pubtableel=$('#example2').DataTable();
+    function SeeImagePub(urlimg)
+    {
+        Swal.fire({
+        imageUrl: "/"+urlimg,
+        imageWidth: 600,
+        imageHeight: 400,
+        imageAlt: 'A tall image'
+        })
+    }
+    
+    function SeeUserPubProfile(iduser)
+    {
+
+    }
+    function ConfirmChangeStatus(idpub, indicefila, option)
+    {   var messageConfirm =''
+        if(option=='4')
+        {
+            messageConfirm="La publicacion sera eliminada!";
+        }
+        else{
+            messageConfirm="La publicacion sera activada nuevamente!";
+        }
+
+        Swal.fire({
+        title: 'Estas seguro?',
+        text: messageConfirm,
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Confirmar'
+        }).then((result) => {
+        if (result.isConfirmed) {
+            $.getJSON('/changeStatusPub/'+idpub+'.'+option, function(data){
+                var idfila=''
+                var htmlceldaoperaciones=''
+                if(option=='4')
+                {
+                    pubtable
+                    .row( $('#activepub'+idpub))
+                    .remove()
+                    .draw();
+                    idfila='activepubel'+idpub;
+                    htmlceldaoperaciones="<a class='btn btn-success eliminar' style='color: white;' onclick='ConfirmChangeStatus(`"+data.newdelete[0][0]+"`,`"+data.newdelete[0][18]+"`,`"+3+"`)'>"+
+                                            "<i class='fas fa-check'></i>"+
+                                        "</a>"
+                }
+                else{
+                    pubtableel
+                    .row( $('#activepubel'+idpub))
+                    .remove()
+                    .draw();
+                    idfila='activepub'+idpub;
+                    htmlceldaoperaciones="<a class='btn btn-danger eliminar' style='color: white;' onclick='ConfirmChangeStatus(`"+data.newdelete[0][0]+"`,`"+data.newdelete[0][18]+"`,`"+4+"`)'>"+
+                                            "<i class='fas fa-trash'></i>"+
+                                        "</a>"
+                }
+
+                Swal.fire(
+                'Correcto!',
+                'Se completo con exito',
+                'success'
+                )
+                var row = document.createElement('tr');
+                row.setAttribute("id", idfila);
+                var cell1 = row.insertCell(0);
+                var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(2);
+                var cell4 = row.insertCell(3);
+                var cell5 = row.insertCell(4);
+                var cell6 = row.insertCell(5);
+                var cell7 = row.insertCell(6);
+                var cell8 = row.insertCell(7);
+                cell1.innerHTML = data.newdelete[0][0]; // Need to insert the VALUE and an ID
+                cell2.innerHTML = data.newdelete[0][1]; // Need to insert the VALUE and an ID
+                cell3.innerHTML = data.newdelete[0][2];
+                cell4.innerHTML = "<a class='btn btn-primary' style='color: white;' onclick='SeeImagePub(`"+data.newdelete[0][3]+"`)'>"+
+                                    "<i class='fas fa-eye'></i>"+
+                                "</a>";
+                cell4.style.textAlign='center';
+                cell5.innerHTML = data.newdelete[0][6];
+                cell6.innerHTML = "<a >"+
+                                        "<img src='/"+data.newdelete[0][12]+"' alt=' width='50' height='50'>"+
+                                    "</a>";
+                cell6.style.textAlign='center';
+                cell7.innerHTML = data.newdelete[0][10];
+                cell8.innerHTML = htmlceldaoperaciones;
+                cell8.style.textAlign='center';
+                row.appendChild( cell1 );
+                row.appendChild( cell2 );
+                row.appendChild( cell3 );
+                row.appendChild( cell4 );
+                row.appendChild( cell5 );
+                row.appendChild( cell6 );
+                row.appendChild( cell7 );
+                row.appendChild( cell8 );
+
+                if(option=='4')
+                {
+                    pubtableel.row.add
+                    ( row )
+                    .draw();
+                }
+                else
+                {
+                    pubtable.row.add
+                    ( row )
+                    .draw();
+                }
+                
+            })
+            
+        }
+        })
+    }
+
+    function Visible(option)
+    {
+        if(option=='PublicacionesEliminadas')
+        {
+            document.getElementById('PubsActivas').style.display='none';
+            document.getElementById('PubsEliminadas').style.display='';
+            $('#btnPublicacionesAc').removeClass('active');
+            $('#btnPublicacionesEl').addClass('active');
+        }
+        else if(option=='PublicacionesActivas')
+        {
+            document.getElementById('PubsEliminadas').style.display='none';
+            document.getElementById('PubsActivas').style.display='';
+            
+            $('#btnPublicacionesEl').removeClass('active');
+            $('#btnPublicacionesAc').addClass('active');
+
+        }
+    }
 </script>
 {%endblock%}
                 
