--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -175,7 +175,11 @@
 
     </div>
 {% else %}
-<p>el usuario no existe</p>
+<div class="col-md-10 offset-md-1">
+    <div class="card">
+        <img src="/static/img/error-404-not-found.jpg" alt="card-img-top">
+    </div>
+</div>
 {% endif %}
 
 
