--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -36,6 +36,7 @@
 
 
 {% if userdata %}
+    {% set iduser=userdata.0%}
     <div class="col-md-6 offset-md-3" style="text-align: center;">
         <h1>Perfil</h1>
         <img src="/{{userdata.5}}" class="linkimgprofilenav" width="150" height="150" alt="">
@@ -77,7 +78,7 @@
         </div>
         <div id="UserPublications">
             {% if userpubs %}
-                <div class="card-columns">
+                <div class="card-columns" id='publicpublicas'>
                     {% for userpub in userpubs %}
                     <div class="">
                         <div class="card" >
@@ -108,7 +109,7 @@
         
         <div id="UserLikes" style="display: none;">
             {% if userlikes %}
-            <div class="card-columns">
+            <div class="card-columns" id="publiclikes">
                 {% for userlike in userlikes %}
                 <div class="">
                     <div class="card" >
@@ -146,7 +147,7 @@
 
         <div id="UserPrivate" style="display: none;">
             {% if userprivates %}
-            <div class="card-columns">
+            <div class="card-columns" id="publicprivate">
                 {% for userprivate in userprivates %}
                 <div class="">
                     <div class="card" >
@@ -175,6 +176,7 @@
 
     </div>
 {% else %}
+{% set iduser=0%}
 <div class="col-md-10 offset-md-1">
     <div class="card">
         <img src="/static/img/error-404-not-found.jpg" alt="card-img-top">
@@ -182,8 +184,83 @@
 </div>
 {% endif %}
 
+<div id="divcargandopubs" style="display: none; text-align: center;">
+    <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+     width="100pt" height="100pt" viewBox="0 0 1823.000000 1823.000000"
+     preserveAspectRatio="xMidYMid meet">
+    
+    <g transform="translate(0.000000,1823.000000) scale(0.100000,-0.100000)"
+    fill="#000000" stroke="none">
+    <path class="marco" d="M2650 18223 c-638 -24 -1240 -245 -1690 -621 -506 -423 -825 -1007
+    -931 -1702 l-24 -155 0 -6625 0 -6625 24 -155 c79 -523 273 -977 577 -1356 97
+    -120 261 -286 374 -377 217 -175 517 -346 770 -437 148 -54 380 -113 556 -142
+    l139 -23 6590 -3 c4759 -2 6626 0 6720 8 241 21 513 81 742 165 240 89 539
+    258 743 421 111 89 308 286 394 394 333 417 538 936 586 1485 7 84 10 2126 8
+    6715 l-3 6595 -23 139 c-50 304 -132 567 -257 821 -125 254 -296 495 -495 695
+    -453 454 -1039 720 -1720 780 -77 6 -2270 9 -6560 8 -3545 -1 -6479 -3 -6520
+    -5z m13077 -1088 c374 -49 685 -194 936 -435 243 -232 382 -498 464 -887 16
+    -72 17 -466 20 -4957 l3 -4879 -52 45 c-388 329 -2621 2179 -2627 2176 -5 -2
+    -717 -592 -1582 -1313 -865 -720 -1583 -1318 -1595 -1327 -21 -17 -68 25
+    -2990 2682 -1633 1485 -2973 2698 -2979 2697 -5 -2 -955 -1052 -2110 -2335
+    -1155 -1282 -2108 -2339 -2118 -2349 -16 -17 -17 197 -14 4717 3 4443 4 4740
+    20 4820 81 399 209 653 446 891 259 259 595 412 1001 458 41 5 2996 9 6567 10
+    5805 1 6504 -1 6610 -14z m-7402 -10367 c1600 -1454 2913 -2643 2919 -2643 6
+    0 733 601 1615 1335 882 734 1609 1335 1616 1335 11 0 1608 -1322 2215 -1834
+    342 -288 380 -325 421 -415 l33 -71 9 -380 c12 -537 1 -1489 -19 -1625 -101
+    -701 -593 -1221 -1288 -1363 l-111 -22 -6620 0 -6620 0 -113 23 c-634 128
+    -1099 572 -1257 1201 -42 166 -45 234 -45 1241 0 1047 0 1038 54 1120 13 19
+    131 154 262 300 2005 2233 3902 4340 3956 4393 26 26 52 47 57 47 4 0 1317
+    -1189 2916 -2642z"
+    stroke="#000"
+        stroke-width="350"
+        fill="none"
+        stroke-dasharray="118.10 118.10"
+        stroke-dashoffset="255.98"/>
+    <path class="circulo" d="M13760 16924 c-385 -46 -687 -182 -944 -425 -230 -218 -388 -502
+    -458 -823 -19 -86 -22 -132 -22 -311 -1 -222 12 -315 64 -474 12 -35 20 -64
+    18 -66 -2 -1 -365 -221 -807 -488 l-803 -487 -21 28 c-11 15 -72 79 -136 142
+    -220 220 -472 353 -791 421 -143 30 -427 33 -575 5 -493 -92 -906 -401 -1124
+    -841 -223 -450 -223 -948 0 -1400 182 -371 511 -655 906 -784 181 -59 289 -76
+    488 -76 179 0 258 10 415 52 264 70 483 197 692 401 67 65 100 92 110 86 42
+    -26 1394 -917 1400 -922 3 -4 -4 -39 -17 -79 -57 -175 -70 -263 -70 -488 1
+    -178 4 -225 23 -311 121 -559 507 -994 1039 -1173 166 -55 297 -75 493 -75
+    195 0 322 19 492 75 470 153 847 532 996 999 126 396 100 794 -78 1167 -182
+    383 -516 674 -925 806 -181 58 -266 71 -475 72 -140 0 -210 -5 -285 -19 -213
+    -39 -437 -131 -609 -250 l-78 -53 -472 310 c-259 171 -610 402 -781 514 l-310
+    204 3 197 c3 131 8 201 15 208 7 6 401 246 877 534 476 288 872 527 881 533
+    12 7 37 -6 110 -56 170 -117 371 -203 583 -249 84 -18 134 -22 301 -22 225 -1
+    302 10 490 71 757 242 1210 1021 1049 1803 -147 713 -761 1226 -1489 1245 -77
+    2 -156 1 -175 -1z m365 -653 c288 -76 536 -299 645 -583 145 -375 14 -823
+    -312 -1069 -176 -132 -345 -189 -564 -189 -253 0 -460 83 -644 257 -142 135
+    -227 283 -271 471 -19 79 -21 112 -16 240 6 170 22 237 91 377 129 261 363
+    444 646 506 113 25 309 20 425 -10z m-4325 -2461 c339 -96 601 -372 676 -711
+    24 -110 22 -292 -5 -403 -29 -120 -44 -151 -149 -307 -122 -183 -199 -251
+    -375 -334 -143 -67 -206 -80 -387 -80 -120 0 -171 4 -225 19 -337 91 -598 349
+    -686 681 -31 116 -31 326 -1 448 91 366 400 652 767 711 17 2 93 3 170 1 105
+    -3 159 -9 215 -25z m4028 -2496 c342 -70 629 -343 724 -689 30 -113 30 -345 0
+    -457 -47 -173 -137 -323 -270 -449 -122 -116 -256 -192 -417 -235 -94 -25
+    -338 -26 -438 -1 -354 88 -632 376 -702 726 -24 115 -16 334 14 439 26 89 88
+    216 146 298 125 175 349 322 560 367 94 21 286 21 383 1z"
+    stroke="#000"
+        stroke-width="350"
+        fill="none"
+        stroke-dasharray="118.10 118.10"
+        stroke-dashoffset="255.98"/>
+    </g>
+    </svg>
+    <h6>Cargando publicaciones...</h6>
+</div>
 
 <script>
+    //estas variable de conteo funcionan para saber cuantas veces he lleegado al final de la ventana
+    var cont=1;//para que solo llame a la ruta json una vez
+    var cont2=1;//saber cantas veces se han cargado mpublicaciones en la pag
+    var optionpage;//Con esta variable le diremos a la ruta JSON en que pestana estamos
+    var contpublicas=1;
+    var contprivadas=1;
+    var contlikes=1;
+
+
     function Visible(option){
         if (option=='Publicaciones'){
             
@@ -195,6 +272,7 @@
             $('#btnPublic').addClass('active');
             $('#btnLikes').removeClass('active');
             $('#btnPrivate').removeClass('active');
+            cont=1;
         }
         else if(option=='Likes'){
             document.getElementById("UserPublications").style.display="None";
@@ -204,6 +282,7 @@
             $('#btnPublicaciones').removeClass('active');
             $('#btnPrivate').removeClass('active');
             $('#btnLikes').addClass('active');
+            cont=1;
         }
         else if(option=='Private'){
             document.getElementById("UserPublications").style.display="None";
@@ -214,6 +293,7 @@
             $('#btnPublic').removeClass('active');
             $('#btnPrivate').addClass('active');
             $('#btnLikes').removeClass('active');
+            cont=1;
         }
         else if(option=='Publics')
         {
@@ -225,6 +305,7 @@
             $('#btnPublic').addClass('active');
             $('#btnPrivate').removeClass('active');
             $('#btnLikes').removeClass('active');
+            cont=1;
         }
     }
 
@@ -324,5 +405,219 @@
         }
     }
     
+
+    
+    //si estamos en la pagina de publicaciones publicas, privadas o likes del usuario
+    //con este metodo se puede saber cuando se llegaal final de la pagina
+    $(window).on("scroll", function() {
+        
+        var scrollHeight = $(document).height();
+        var scrollPosition = $(window).height() + $(window).scrollTop();
+        if ((scrollHeight - scrollPosition) / scrollHeight === 0 && cont==1) {
+        document.getElementById('divcargandopubs').style.display='';
+        versvg();
+        if(!!document.getElementById('btnPublicaciones'))
+        {
+            if(document.getElementById('btnPublicaciones').classList.contains('active'))
+            {
+                if(!!document.getElementById('btnPublic'))
+                {
+                    if(document.getElementById('btnPublic').classList.contains('active'))
+                    {
+                        optionpage=2;
+                        cont2=contpublicas;
+                        console.log('publicaciones del perfil');
+                    }
+                    else if(document.getElementById('btnPrivate').classList.contains('active'))
+                    {
+                        optionpage=3;
+                        cont2=contprivadas;
+                        console.log('publicaciones del perfil privadas');
+                    }
+                }
+                else
+                {
+                    optionpage=2;
+                    cont2=contpublicas;
+                    console.log('publicaciones del perfil otro');
+                }
+                
+            }
+            else if(document.getElementById('btnLikes').classList.contains('active'))
+            {
+                optionpage=4;
+                cont2=contlikes;
+                console.log('publicaciones del perfil likes');
+            }
+        }
+        else
+        {
+            optionpage=15;
+            cont2=1;
+        }
+        
+        console.log(optionpage)
+        $.getJSON('/getMorePublics/'+optionpage+'.'+(cont2*20)+'.'+"{{iduser}}", function(data){
+            
+            cont=2;
+            if(data.GroupPubs.length>0)
+            {    
+                var html='';
+                switch (optionpage)
+                {
+                    case 2:
+                        data.GroupPubs.forEach(publicpub => {
+                            html+="<div class=''>"+
+                                    "<div class='card' >"+
+                                        "<img src='/"+publicpub[3]+"' width='100' height='200' class='card-img-top img-fluid' alt='"+publicpub[1]+"'>"+
+                                        "<div class='card-body'>"+
+                                            "<h5 class='card-title'>"+publicpub[1]+"</h5>"+
+                                        "</div>"+
+                                        "<div class='card-footer' style='text-align: center;'>"+
+                                            "<div class='row'>"+
+                                                "<b> "+publicpub[7]+" Me gusta</b>"+
+                                            "</div>"+
+                                            "<div class='row'>"+
+                                                "<a class='btn' href='/publication/"+publicpub[0]+"'>"+
+                                                    "<i class='far fa-eye'></i> <b>Ver Publicacion</b>"+
+                                                "</a>"+
+                                            "</div>"+
+                                        "</div>"+
+                                    "</div>"+
+                                "</div>";
+                        });
+                        document.getElementById('publicpublicas').innerHTML+=html;
+                        cont=1;
+                        contpublicas+=1;
+                        break;
+                    case 3:
+                        data.GroupPubs.forEach(privatepub=>{
+                            html+="<div class=''>"+
+                                    "<div class='card' >"+
+                                        "<img src='/"+privatepub[3]+"' width='100' height='200' class='card-img-top img-fluid' alt='"+privatepub[1]+"'>"+
+                                        "<div class='card-footer'>"+
+                                            "<div class='row'>"+
+                                                "<a class='btn' href='/publication/"+privatepub[0]+"'>"+
+                                                    "<i class='far fa-eye'></i> <b>Ver Publicacion</b>"+
+                                                "</a>"+
+                                            "</div>"+
+                                            "<div class='row'>"+
+                                                "<a class='btn'onclick='ConfirmChangeStatus('"+privatepub[0]+"', 3)' >"+
+                                                    "<i class='fas fa-lock-open'></i> <b>Hacer publica</b>"+
+                                                "</a>"+
+                                            "</div>"+
+                                        "</div>"+
+                                    "</div>"+
+                                "</div>";
+                        });
+                        document.getElementById('publicprivate').innerHTML+=html;
+                        cont=1;
+                        contprivadas+=1;
+                        break;
+                    case 4:
+                        data.GroupPubs.forEach(publike=>{
+                            html+="<div class=''>"+
+                                "<div class='card' >"+
+                                    "<img src='/"+publike[3]+"' width='100' height='200' class='card-img-top img-fluid' alt='"+publike[1]+"'>"+
+                                    "<div class='card-body'>"+
+                                        "<h5 class='card-title'>"+publike[1]+"</h5>"+
+                                    "</div>"+
+                                    "<div class='card-footer'>"+
+                                        "<div class='row'>";
+                            if(data.is_connected)
+                            {
+                                html+="<a class='btn col-md-12' id='btnlikeprofile"+publike[0]+"' style='color: red;'onclick='LikeCangeProfile('"+publike[0]+"')'>"+
+                                                    
+                                            "<i class='fas fa-heart' id='iconlikeprofile"+publike[0]+"'></i><b>Me gusta</b>"+
+                                        "</a>";
+                            }
+                            html+="</div>"+
+                                            "<div class='row'>"+
+                                                "<a class='btn' href='/publication/"+publike[0]+"'>"+
+                                                    "<i class='far fa-eye'></i> <b>Ver Publicacion</b>"+
+                                                "</a>"+
+                                            "</div>"+
+                                        "</div>"+
+                                    "</div>"+
+                                "</div>";  
+                        });
+                        document.getElementById('publiclikes').innerHTML+=html;
+                        cont=1;
+                        contlikes+=1;
+                        break;    
+                }
+                document.getElementById('divcargandopubs').style.display='none';
+            }
+            else
+            {
+                document.getElementById('divcargandopubs').style.display='none';
+                
+            }
+        });
+        
+    }
+    });
+
+    var idinterval;//funcionara para guardar el id del intervalo de tiempo y terminar el antrior antes de iniciar el
+    //siguiente intervalo al llamar a la funcio, si no se detiene la animacion se vera mal
+    function versvg(){
+        clearInterval(idinterval);
+        var path = document.querySelector('.marco');
+        var length = path.getTotalLength();
+        var pathcir = document.querySelector('.circulo');
+        var lengthcir = pathcir.getTotalLength();
+        // Clear any previous transition
+        path.style.transition = path.style.WebkitTransition = 'none';
+        // Set up the starting positions
+        path.style.strokeDasharray = length + ' ' + length;
+        path.style.strokeDashoffset = length;
+        // Trigger a layout so styles are calculated & the browser
+        // picks up the starting position before animating
+        path.getBoundingClientRect();
+        // Define our transition
+        path.style.transition = path.style.WebkitTransition =
+        'stroke-dashoffset 3s ease-in-out';
+        path.style.strokeDashoffset = '0';
+
+        pathcir.style.transition = pathcir.style.WebkitTransition = 'none';
+        // Set up the starting positions
+        pathcir.style.strokeDasharray = lengthcir + ' ' + lengthcir;
+        pathcir.style.strokeDashoffset = lengthcir;
+        // Trigger a layout so styles are calculated & the browser
+        // picks up the starting position before animating
+        pathcir.getBoundingClientRect();
+        // Define our transition
+        pathcir.style.transition = pathcir.style.WebkitTransition =
+        'stroke-dashoffset 3s ease-in-out';
+        pathcir.style.strokeDashoffset = '0';
+
+        idinterval=setInterval(() => {
+        // Clear any previous transition
+        
+        path.style.transition = path.style.WebkitTransition = 'none';
+        // Set up the starting positions
+        path.style.strokeDasharray = length + ' ' + length;
+        path.style.strokeDashoffset = length;
+        // Trigger a layout so styles are calculated & the browser
+        // picks up the starting position before animating
+        path.getBoundingClientRect();
+        // Define our transition
+        path.style.transition = path.style.WebkitTransition =
+        'stroke-dashoffset 3s ease-in-out';
+        path.style.strokeDashoffset = '0';
+
+        pathcir.style.transition = pathcir.style.WebkitTransition = 'none';
+        // Set up the starting positions
+        pathcir.style.strokeDasharray = lengthcir + ' ' + lengthcir;
+        pathcir.style.strokeDashoffset = lengthcir;
+        // Trigger a layout so styles are calculated & the browser
+        // picks up the starting position before animating
+        pathcir.getBoundingClientRect();
+        // Define our transition
+        pathcir.style.transition = pathcir.style.WebkitTransition =
+        'stroke-dashoffset 3s ease-in-out';
+        pathcir.style.strokeDashoffset = '0';
+        }, 3000);
+    }
 </script>
 {% endblock %}
