--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,24 +1,31 @@
 {% extends "layout.html" %}
 {% block content %}
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-
 <div class="col-md-8 offset-md-2" style="text-align: center;" id="divformeditprofile">
-    <h1>Editar Perfil</h1>
-    <form action="/updateUser" method="POST" id="formedituser"  enctype="multipart/form-data" >
-        <div class="form-group col-md-6 offset-md-3">
-            <img src="{{userdata.5}}" class="linkimgprofilenav" id="imgprofileedit" width="150" height="150" alt="">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-import"></i></span>
-                </div>
-                <div class="custom-file">
-                    <input accept="image/png,image/jpeg,image/gif"  type="file" class="custom-file-input" id="inputGroupFile01" name="imgprofileinput" aria-describedby="inputGroupFileAddon01" >
-                    <label class="custom-file-label" for="inputGroupFile01" style="text-align: left;">Cambiar</label>
-                </div>
+    <h1>Editar Foto Perfil</h1>
+    <div class="form-group col-md-6 offset-md-3">
+        <img src="{{userdata.5}}" class="linkimgprofilenav" id="imgprofileedit" width="150" height="150" alt="">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupFileAddon01"><i class="fas fa-file-import"></i></span>
+            </div>
+            <div class="custom-file">
+                <input accept="image/png,image/jpeg,image/gif"  type="file" class="custom-file-input" id="inputGroupFile01" name="imgprofileinput" aria-describedby="inputGroupFileAddon01" >
+                <label class="custom-file-label" for="inputGroupFile01" style="text-align: left;">Cambiar</label>
             </div>
         </div>
+    </div>
+    <h1>Editar datos Personales</h1>
+    <form action="/updateUser" method="POST" id="formedituser"  enctype="multipart/form-data" >
+        
     
         <div class="row">
             <div class="form-group col-md-6">
@@ -67,7 +74,7 @@
                 </div>
                 <div class="form-group" >
                     <label>Fecha de Nacimiento</label>
-                    <input class="form-control" type="date" value="{{userdata.9}}" name="dateedit">
+                    <input class="form-control" type="date" value="{{userdata.9}}" id="inputfechanac" name="dateedit">
                 </div>
             </div>
             
@@ -81,9 +88,9 @@
             </button>
         </div>
         <div class="col-md-6">
-            <button class="btn btn-secondary form-control" disabled id="CancelarEdicion">
+            <a class="btn btn-secondary form-control" href="/UserProfile/{{userdata.0}}" disabled id="CancelarEdicion">
                 Cancelar
-            </button>
+            </a>
         </div>
     </div>
 
@@ -157,9 +164,60 @@ stroke="#000"
 </svg>
     <h3>Cargando, por favor espere...</h3>
 </div>
+
+<div class="modal fade" id="div-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Crop image</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="img-container">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <!-- en este img se visualizará todo el archivo seleccionado-->
+                            <img id="img-original" class="img-fluid">
+                        </div>
+                        <div class="col-md-4">
+                            <!-- en este div se mostrará la zona seleccionada, lo que quedará despues de hacer click en el boton crop-->
+                            <div id="div-preview" class="preview img-fluid"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="btn-crop">Subir Imagen</button>
+            </div>
+        </div>
+    </div>
+</div>
+<style>
+    .preview {
+    overflow: hidden;
+    width: 160px;
+    height: 160px;
+    margin: 10px;
+    border: 1px solid #0B5ED7;
+}
+.cropper-view-box,
+    .cropper-face {
+    border-radius: 50%;
+}
+</style>
 <script>
+    //file es input de selección
+    const $file = document.getElementById("inputGroupFile01")
+    //es elemento img dentro del modal donde se montará la imagen seleccionada
+    const $image = document.getElementById("img-original")
+
+    const $modal = document.getElementById("div-modal")
         
     var modified=false;
+    var imgprofilemod=false;
+    var ancho = 0;
+    var alto = 0;
     $(document).ready(function () 
     {   //esta parte ayuda a saber si alguno de los campos fue modificado para asi activar los botonoes de
         //guardar y cancelar
@@ -170,41 +228,101 @@ stroke="#000"
         }); 
     });
     
-    document.getElementById("inputGroupFile01").onchange = function(e) {
+    //document.getElementById("inputGroupFile01").onchange = function(e) {
     // Creamos el objeto de la clase FileReader
-    let reader = new FileReader();
+    //    let reader = new FileReader();
 
-    // Leemos el archivo subido y se lo pasamos a nuestro fileReader
-    reader.readAsDataURL(e.target.files[0]);
+        // Leemos el archivo subido y se lo pasamos a nuestro fileReader
+        
+    //    reader.readAsDataURL(e.target.files[0]);
 
-    // Le decimos que cuando este listo ejecute el código interno
-    reader.onload = function(){
-        $('#imgprofileedit').attr("src",reader.result);
-    };
+    //    var imagen = e.target.files[0];
+    //   var _URL = window.URL || window.webkitURL;
+    //    var img = new Image();
+    //    img.src = _URL.createObjectURL(imagen);
+    //    img.onload = function () {
+    //       ancho = img.width;
+    //        alto = img.height;
+    //        console.log(ancho + ' ' + alto);
+    //        $('#imgprofileedit').attr("src",img.src);
+    //        
+    //    }
+    //    
+    //}
+
+    
+
+    function validarImgProfile()
+    {
+        var laimgesvalida=false;
+        
+        if(ancho<550&&alto<550)
+        {
+            laimgesvalida=true;
+            console.log(laimgesvalida);
+        }
+        return laimgesvalida;
+    }
+
+    function validarFechaNac()
+    {
+        var fecha = new Date(document.getElementById("inputfechanac").value);
+        var today = new Date();
+        var edadyears = today.getFullYear()-fecha.getFullYear();
+        var edadmonths=today.getMonth()-fecha.getMonth();
+        var isfehcavalida=false;
+
+        if(edadyears >= 18)
+        {
+            if(edadyears==18)
+            {
+                if(edadmonths>=0)
+                {
+                    isfehcavalida=true;
+                }
+            }
+            else
+            {
+                isfehcavalida=true;
+            }
+        }
+        return isfehcavalida;
     }
 
     function ConfirmEdition(){
-        
-        Swal.fire({
-        title: 'Estas seguro?',
-        text: "Los Cambios seran guardados!",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Confirmar',
-        
-        }).then((result) => {
-        if (result.isConfirmed) {
-            document.getElementById("divformeditprofile").style.display='none';
-            document.getElementById("cargando").style.display='';
-            versvg();
-            document.getElementById("formedituser").submit();
+        var imgvalida=new Boolean(false);
+        if(validarFechaNac())
+        {
+            Swal.fire({
+                title: 'Estas seguro?',
+                text: "Los Cambios seran guardados!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Confirmar',
+                
+                }).then((result) => {
+                if (result.isConfirmed) {
+                    document.getElementById("divformeditprofile").style.display='none';
+                    document.getElementById("cargando").style.display='';
+                    versvg();
+                    document.getElementById("formedituser").submit();
+                }
+                });
         }
-        });
+        else
+        {
+            Swal.fire({
+                icon: 'warning',
+                title: 'Advertencia',
+                text: 'Debes de tener mas de 18 ',
+            });
+        }
             
         
     }
+
     function versvg(){
         var path = document.querySelector('.marco');
         var length = path.getTotalLength();
@@ -263,5 +381,122 @@ stroke="#000"
         pathcir.style.strokeDashoffset = '0';
         }, 3000);
     }
+
+
+    //Zona de recorte de imagen
+    
+
+    //si deseamos interactuar con el modal usando los metodos nativos de bootstrap5
+    //debemos construirlo pasando el elemento. En nuestro caso .show() y .hide()
+    const objmodal = new bootstrap.Modal($modal, {
+        //que el modal no interactue con el teclado
+        keyboard: false
+    })
+
+    //escuchamos el change del input-file
+    $file.addEventListener("change", function (e) {
+        const load_image = function (url){
+            $image.src = url
+            objmodal.show()
+        }
+
+        const files = e.target.files
+
+        if(files && files.length>0) {
+            const objfile = files[0]
+            //el objeto file tiene las propiedades: name, size, type, lastmodified, lastmodifiedate
+            
+            //para poder visualizar el archivo de imagen lo debemos pasar a una url 
+            //el objeto URL está en fase experimental así que si no existe usaria FileReader
+            if (URL){
+                //crea una url del estilo: blob:http://localhost:1024/129e832d-2545-471f-8e70-20355d8e33eb
+                const url = URL.createObjectURL(objfile)
+                load_image(url)
+            }
+            else if (FileReader) {
+                const reader = new FileReader()
+                reader.onload = function (e) {
+                    load_image(reader.result)
+                }
+                reader.readAsDataURL(objfile)
+            }
+        }
+    })//file.on-change
+
+
+    const $btncrop = document.getElementById("btn-crop")
+    //configuramos el click del boton crop
+    $btncrop.addEventListener("click", function (){
+        //obtenemos la zona seleccionada
+        const canvas = cropper.getCroppedCanvas()
+
+        canvas.toBlob(function (blob){
+            //el objeto blob (binary larege object) tiene las propiedades: size y type
+            const reader = new FileReader()
+            //se pasa el binario base64
+            reader.readAsDataURL(blob)
+
+            reader.onloadend = function (){
+                const base64data = reader.result
+                //base64data es un string del tipo: data:image/png;base64,iVBORw0KGgoAAAA....
+                console.log("base64data", base64data)
+                //en mi caso estoy trabajando con php en el back pero puede ser cualquier url
+                const url = "/updateImgUserProfile"
+                fetch(url, {
+                    method: "POST",
+                    headers: {
+                        //si la respuesta del servidor no es un json saltará una excepción en js
+                        "Accept": "application/json",
+                        //le indica al servidor que se le enviará un json
+                        "Content-Type": "application/json"
+                    },
+
+                    body: JSON.stringify({
+                        image: base64data
+                    })
+                })
+                .then(response => response.json())
+                .then(function (result){
+                    $file.value = ""    //resetea el elemento input-file (file-upload)
+                    objmodal.hide()     //escondo el modal
+                    //result es algo como: {message:"image uploaded successfully.", file:"upload/uuid.png"}
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Confirmacion',
+                        text: result.message,
+                    });
+
+                    //este es el img que está debajo del elemnto input-file
+                    const $img = document.getElementById("imgprofileedit")
+                    $img.src = "/"+result.file
+                })
+            }//reader.on-loaded
+        })//canvas.toblob
+    })//btncrop.on-click
+
+
+    //el objeto cropper que habrá que crearlo y destruirlo. 
+    //Crearlo al mostrar el modal y destruirlo al cerrarlo
+    let cropper = null
+    $modal.addEventListener("shown.bs.modal", function (){
+        console.log("modal.on-show")
+        //crea el marco de selección sobre el objeto $image
+        cropper = new Cropper($image, {
+            //donde se mostrará la parte seleccionada
+            preview: document.getElementById("div-preview"),
+            //3: indica que no se podrá seleccionar fuera de los límites
+            viewMode: 3,
+            //NaN libre elección, 1 cuadrado, proporción del lado horizontal con respecto al vertical
+            aspectRatio: 1,
+            autoCropArea: 1,
+            cropBoxResizable: false,
+        })
+    })//modal.on-shown
+
+    $modal.addEventListener("hidden.bs.modal", function (){
+        console.log("modal.on-hide")
+        cropper.destroy()
+        cropper = null
+    })//modal.on-hidden  
 </script>
 {% endblock %}
