--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbarprinc">
         <a class="navbar-brand" href="/">
             <img src="{{ url_for('static', filename='img/logopagina.png')}}" width="60" height="60" alt="logo de la pagina">
             Share Images
@@ -148,6 +148,7 @@
             $('#icondropdownoptions').addClass('fas fa-angle-double-down');
             
         });
+
     </script>
 </body>
 </html>
