--- a/templates/crearPublicacion.html
+++ b/templates/crearPublicacion.html
@@ -3,6 +3,26 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<style>
+    .btnback{
+        background: white;
+        color: black;
+        border-radius: 45%;
+        width: 50px;
+        height: 50px;
+        vertical-align: middle;
+        box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.2);
+    }
+    .btnback:hover{
+        background: black;
+        color: white;
+    }
+</style>
+<div>
+    <a class="btnback btn" href="/">
+        <i class="fas fa-arrow-left" style="padding-top: 50%;"></i>
+    </a>
+</div>
 
 {% if datapub.0==0%}
 <div class="col-md-10 offset-md-1" id="divformaddeditpub">
@@ -151,11 +171,12 @@ stroke="#000"
 <h3>Cargando, por favor espere...</h3>
 </div>
 
+
+
 <script>
     var modified=false;
     $(document).ready(function () 
     {   
-        
         //esta parte ayuda a saber si alguno de los campos fue modificado para asi activar los botonoes de
         //guardar y cancelar
 
