--- a/templates/publication.html
+++ b/templates/publication.html
@@ -4,6 +4,26 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<style>
+    .btnback{
+        background: white;
+        color: black;
+        border-radius: 45%;
+        width: 50px;
+        height: 50px;
+        vertical-align: middle;
+        box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.2);
+    }
+    .btnback:hover{
+        background: black;
+        color: white;
+    }
+</style>
+<div>
+    <a class="btnback btn" href="/">
+        <i class="fas fa-arrow-left" style="padding-top: 50%;"></i>
+    </a>
+</div>
 
 {% with messages = get_flashed_messages(with_categories=true) %}
     <!--Ahora comprobaremos si la variable esta vacia o no, si esta vacia es que no ha realizado nada
@@ -292,8 +312,51 @@
 </div>
 {% endif %}<!--Fin del if en que se comprueba la existencia de la publicacion-->
 
+<div class="menuinferior">
+    <div class="contenedormenu">
+        <a class="btn-menufloat btn-lg" href="/"><i class="fas fa-home"></i></a>
+        <a class="btn-menufloat btn-lg"><i class="fas fa-search"></i></a>
+        <a class="btn-menufloat btn-lg" href="/crearPublicacion/0"><i class="fas fa-plus"></i></a>
+        {% if is_logged() %}
+        <a href="/UserProfile/{{session.id_user}}" class="btn-menufloat btn-lg">
+            <i class="fas fa-user"></i>
+        </a>
+        {% else %}
+        <a href="/SiginSignup/SIGNIN" class="btn-menufloat btn-lg">
+            <i class="fas fa-user"></i>
+        </a>
+        {% endif %}
+    </div>
+</div>
+
 
 <script>
+    $(document).ready(function(){
+        var div = document.querySelector('.menuinferior');
+        if (window.innerWidth<=997){
+            console.log('no los muestro');
+            
+            // Apply style to div
+            div.setAttribute('style', 'display: flex');
+        }
+        else{
+            console.log('no los muestro');
+            // Apply style to div
+            div.setAttribute('style', 'display: none');
+        }
+    });
+    window.addEventListener('resize', function(){
+        var div = document.querySelector('.menuinferior');
+        if (window.innerWidth<=997){
+            console.log('no los muestro')
+            div.setAttribute('style', 'display: flex');
+        }
+        else{
+            console.log('no los muestro')
+            div.setAttribute('style', 'display: none');
+        }
+    });
+    
     function LikeChange(idpub)
     {
         if($('#iconlike').is('.far'))
