--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,3 +49,35 @@ a{
     background: black;
     color: white;
 }
+
+.menuinferior{
+    
+    position: fixed;
+    bottom: 0;
+    z-index: 5000;
+    top: 85%;
+    left: 0%;
+    right: 0%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    
+}
+.contenedormenu{
+    background: rgb(92, 92, 92); 
+    border:20px rgb(92, 92, 92) solid; 
+    border-radius: 20px; 
+    text-align: center;
+    box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.2);
+}
+.btn-menufloat{
+    padding-left: 20px;
+    background-color: white;
+    color: black;
+}
+.btn-menufloat:hover{
+    padding-left: 20px;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+
