--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -8,6 +8,26 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<style>
+    .btnback{
+        background: white;
+        color: black;
+        border-radius: 45%;
+        width: 50px;
+        height: 50px;
+        vertical-align: middle;
+        box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.2);
+    }
+    .btnback:hover{
+        background: black;
+        color: white;
+    }
+</style>
+<div>
+    <a class="btnback btn" href="/">
+        <i class="fas fa-arrow-left" style="padding-top: 50%;"></i>
+    </a>
+</div>
 
 <div class="col-md-8 offset-md-2" style="text-align: center;" id="divformeditprofile">
     <h1>Editar Foto Perfil</h1>
