--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,11 +37,25 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbarprinc">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/" id="LogoNamePag">
             <img src="{{ url_for('static', filename='img/logopagina.png')}}" width="60" height="60" alt="logo de la pagina">
             Share Images
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+        
+        <div class="nav-item dropdown ml-auto" id="btnLogOut" style="display: none;">
+            {% if is_logged() %}
+            <a class="nav-link " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false" onclick="FocusOptions()">
+                <i class="fas fa-angle-double-down" id="icondropdownoptions"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                
+                <a class="dropdown-item" href="/LogOut"><i class="fas fa-sign-out-alt"></i>Cerrar Sesion</a>
+            </div>
+            {% endif %}
+        </div>
+
+        <button class="navbar-toggler" id="btnNavbarcollapse" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,7 +64,19 @@
                     font-weight: bold;
                 }
             </style>
+
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-search"></i></span>
+                        </div>
+                        <input type="search" class="form-control" maxlength="150" placeholder="Buscar" id="txtbusqueda" aria-label="Buscar" aria-describedby="basic-addon1" list="listasugerencias">
+                        <datalist id="listasugerencias">
+                            <!--Aqui se agregaran las sugerencias-->
+                        </datalist>
+                    </div>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Principal<span class="sr-only">(current)</span></a>
                 </li>
@@ -127,11 +153,36 @@
 
     
 
-
     
     
     <script>
-        
+        $(document).ready(function(){
+            if (window.innerWidth<=997){
+                console.log('no los muestro')
+                document.getElementById('navbarNav').style.display='None';
+                document.getElementById('btnNavbarcollapse').style.display='None';
+                document.getElementById('btnLogOut').style.display='';
+                
+            }
+        });
+        window.addEventListener('resize', function(){
+            if (window.innerWidth<=997){
+                console.log('no los muestro')
+                document.getElementById('navbarNav').style.display='None';
+                document.getElementById('btnNavbarcollapse').style.display='None';
+                document.getElementById('btnLogOut').style.display='';
+                
+            }
+            else{
+                console.log('no los muestro')
+                document.getElementById('navbarNav').style.display='';
+                document.getElementById('btnNavbarcollapse').style.display='';
+                document.getElementById('btnLogOut').style.display='None';
+                
+            }
+        });
+
+
         function FocusOptions(){
             if ($('#icondropdownoptions').is('.fa-angle-double-down')){
                 $('#icondropdownoptions').removeClass('fas fa-angle-double-down');
@@ -149,6 +200,33 @@
             
         });
 
+        $('#txtbusqueda').on('keyup', function(){
+            var busqueda=document.getElementById('txtbusqueda').value;
+            var html='';
+            if(busqueda.length>=3)
+            {
+                $.getJSON('/SearchSuggestions/'+1+'.'+busqueda, function(data){
+                    if(data.suger.length>0)
+                    {
+                        data.suger.forEach(element => {
+                            html+="<option value='"+element[0]+"'>"
+                        });
+                    }
+                    document.getElementById('listasugerencias').innerHTML=html
+                });
+            }
+        });
+
+        $('#txtbusqueda').on('keypress', function(event){
+            if(event.key==='Enter')
+            {
+                var busqueda=document.getElementById('txtbusqueda').value;
+                if(busqueda.length>=3)
+                {
+                    location.href = '/SearchResult/'+2+'.'+busqueda;
+                }
+            }
+        });
     </script>
 </body>
 </html>
